# hybrid_log_classification_pipeline

./: .gitignore  README.md  classified_logs_output.csv  classifier.py  main.py  process_with_bert.py  process_with_llm.py  process_with_regex.py  pyproject.toml  requirements.txt  server.py
saved_models/: lr_model.joblib
tranning/: cluster_logs.txt  hybrid_report.ipynb  process_data.ipynb
